Solve button texts alignment

--- a/sass/mixins/_button-search.scss
+++ b/sass/mixins/_button-search.scss
@@ -3,8 +3,11 @@
   border-radius: 1rem;
   border: #fff;
   display: flex;
+  border: #ed2e7e;
   padding: 10px;
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 50px;
+  align-items: center;
+  justify-content: center;
 }
